added module logic to implant and c2

--- a/migrat_c2/lib/migrat_c2_web/live/connections_live/endpoint.html.heex
+++ b/migrat_c2/lib/migrat_c2_web/live/connections_live/endpoint.html.heex
@@ -11,9 +11,20 @@
       </p>
       <%= if @connection.connected do %>
 
-      <h4>Term:</h4>
 
-      <.terminal connection={@connection} id={@id}/>
+      <p>
+        <%= link "start systemshell", to: "#", phx_click: "start_systemshell", phx_value_id: @id %>
+      </p>
+
+      <div>
+      <h4>Running Modules</h4>
+      <ul>
+      <%= for module <- @connection.modules do %>
+      <li><%= module %></li>
+      <.terminal connection={@connection} id={@id} name={module}/>
+      <%= end %>
+      </ul>
+      </div>
 
       <h4>shell: </h4>
       <pre><code>
