--- a/migrat_c2/lib/migrat_c2_web/live/connections_live/endpoint.html.heex
+++ b/migrat_c2/lib/migrat_c2_web/live/connections_live/endpoint.html.heex
@@ -1,44 +1,35 @@
-<h3><%= @id %></h3>
-      <%= if @exists do %>
-      <p>
-      Computername: <%= @connection.ident.computerName %>
-      </p>
-      <p>
-      Username: <%= @connection.ident.username %>
-      </p>
-      <p>
-      Processname: <%= @connection.ident.processname %>
-      </p>
-      <%= if @connection.connected do %>
-      <h4>shell: </h4>
-      <pre><code>
-      <%= for line <- Enum.reverse(@connection.shell_output) do %>
-      <%= line %>
-      <% end %>
-      </code></pre>
+<div class="flex flex-col flex-auto">
+  
+    <div class="flex flex-row justify-center">
+        <div class="flex flex-col">
+          <h3 class="text-2xl font-semibold whitespace-nowrap leading-none tracking-tight">
+            Computer
+          </h3>
 
-      <.form let={f} for={@changeset} phx-submit="shell_command">
-        <%= label f, :command %>
-        <%= text_input f, :command %>
-        <%= error_tag f, :command %>
-
-        <%= submit "Run" %>
-      </.form>
-
-      <p>
-        <%= link "Take Screenshot", to: "#", phx_click: "take_screenshot", phx_value_id: @id %>
-      </p>
-
-      <%= if @screenshot_exists do %>
-        <p>
-          <img src={"data:image/png;base64, #{@screenshot}"} alt="no image" />
-        </p>
-      <% end %>
-
-      <p><%= link "Disconnect", to: "#", phx_click: "disconnect", phx_value_id: @id %></p>
-      <% else %>
-      <p><%= link "Connect", to: "#", phx_click: "connect", phx_value_id: @id %></p>
-      <% end %>
-      <% else %>
-      doesnt exist
-      <% end %>
+          <div class="text-sm text-muted-foreground">Connected</div>
+        </div>
+        <div class="">
+          <button phx-click="disconnect" phx-value-id={@id}
+            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+            Disconnect
+          </button>
+        </div>
+    </div>
+    
+    <div class="py-20">
+      <ul class="flex border-b">
+        <li class="">
+          <a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-blue-700 font-semibold" href="#">Active</a>
+        </li>
+        <li class="mr-1">
+          <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="#">Tab</a>
+        </li>
+        <li class="mr-1">
+          <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="#">Tab</a>
+        </li>
+        <li class="mr-1">
+          <a class="bg-white inline-block py-2 px-4 text-gray-400 font-semibold" href="#">Tab</a>
+        </li>
+      </ul>
+    </div>
+</div>
